# deep-ecg-2026

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/: cross_china_ptb.ipynb  dataset_china.ipynb  dataset_mit_bih.ipynb  dataset_ptb_xl.ipynb
src/finders/: data_finders.py
